--- a/playlist.html
+++ b/playlist.html
@@ -31,7 +31,7 @@
         <ul class="navlist">
           <li><a href="playlist.html">Playlist</a></li>
           <li><a href="edits.html">Edits</a></li>
-          <!--<li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
@@ -42,7 +42,7 @@
         src="https://vk.com/js/api/openapi.js?168"
         charset="windows-1251"
       ></script>
-      <!-- Put this script tag to the place, where the Playlist block will be -->
+      <!--VK Playlist-->
       <div class="playlist-widget" id='vk_playlist_375563825_84100706'></div>
       <script type="text/javascript">
         VK.Widgets.Playlist('vk_playlist_375563825_84100706', 375563825, 84100706, 'a02ad1dc392b3e8ab2');
