--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,16 @@
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
-    <div class="icons">
-    <a href="#" target="_blank"><i class='bx bxl-vk'></i></a>
-    <a href="#" target="_blank"><i class='bx bxl-youtube' ></i></a>
-    <a href="#" target="_blank"><i class='bx bxl-steam' ></i></a>
-    <a href="#" target="_blank"><i class='bx bxl-instagram' ></i></a>
-  </div>
+    <h1>Ovara</h1>
+    <div class="order">
+      <h3>To make an order..</h3>
+      <h2>Please write me on socials:</h2>
+      <div class="socials">
+        <a href="https://vk.com/ovaraeditor" target="_blank"><i class='bx bxl-vk'></i></a>
+        <a href="https://www.youtube.com/channel/UCSPM0-RhR-JctikYwZEkb4Q" target="_blank"><i class="ri-youtube-line"></i></a>
+        <a href="https://steamcommunity.com/id/wondernotyou" target="_blank"><i class="ri-steam-line"></i></a>
+    </div>
+      </div>
+    </div>
 </body>
 </html>
