--- a/edits.html
+++ b/edits.html
@@ -29,7 +29,7 @@
         <ul class="navlist">
           <li><a href="playlist.html">Playlist</a></li>
           <li><a href="edits.html">Edits</a></li>
-          <!--<li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="bx bx-menu" id="menu-icon"></div>
     </header>
