--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="navlist">
         <li><a href="playlist.html">Playlist</a></li>
         <li><a href="edits.html">Edits</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="donate.htm">Donate</a></li>
       </ul>
       <div class="bx bx-menu" id="menu-icon"></div>
     </header>
