--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>
           Beautiful edits. Low price.
         </p>
-        <a href="#">Contact me</a>
+        <a href="donate.htm">Donate</a>
         <a href="edits.html" class="ctaa"><i class="ri-play-fill"></i>Watch Edits</a>
       </div>
       <div class="hero-img">
